tp_am_set_default(): Take a weak ref instead of a strong one

https://bugs.freedesktop.org/show_bug.cgi?id=48230